fix: spacing  in mobile

--- a/src/components/city/city.scss
+++ b/src/components/city/city.scss
@@ -59,7 +59,7 @@
     display: flex;
     justify-content: space-evenly;
     text-align: center;
-    padding: 2em;
+    padding-top: 2em;
     padding-bottom: 1em;
     z-index: 2;
     width: 100%;
